--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.16.2",
+    "json-2-csv": "^2.1.2",
     "mongoose": "^5.0.6",
     "twitter": "^1.7.1"
   }
