--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Innovacer",
-  "version": "0.1.0",
+  "name": "Innovaccer",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "start": "node index.js"
